updated overflow issue

--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ nav{
 @media screen and (max-width:850px){
     body{
         text-align: center;
-        overflow: hidden;
+        overflow-x: hidden;
     }
     .main--section{
         flex-direction: column-reverse;
